--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         tools:replace="android:allowBackup,android:label"
         tools:targetApi="31">
         <activity
+            android:name=".view.general.BloodPressureActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.patient.patientdata.heartrate.HeartRateActivity"
             android:exported="false"
             android:label="@string/title_activity_heart_rate"
@@ -35,13 +38,12 @@
         <activity
             android:name=".view.general.Homepage4nurse"
             android:exported="false" />
-
-        <activity android:name=".view.general.TaskDetailActivity"
+        <activity
+            android:name=".view.general.TaskDetailActivity"
             android:exported="false" />
-
-        <activity android:name=".view.general.TaskAddActivity"
+        <activity
+            android:name=".view.general.TaskAddActivity"
             android:exported="false" />
-
         <activity
             android:name=".view.general.UploadPhoto"
             android:exported="false" />
@@ -143,8 +145,9 @@
         <activity
             android:name=".view.patient.PatientDashboardActivity"
             android:exported="false" />
-        <activity android:name="deakin.gopher.guardian.view.general.TasksListActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".view.general.TasksListActivity"
+            android:exported="false" />
 
         <service
             android:name=".model.FirebaseMessagingService"
