Creates the PIN code activity for 2-factor authentication

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,6 +170,10 @@ dependencies {
 
     // Jetpack Compose navigation
     implementation("androidx.navigation:navigation-compose:2.7.7")
+
+    // Retrofit
+    implementation("com.squareup.retrofit2:retrofit:2.11.0")
+    implementation ('com.squareup.retrofit2:converter-gson:2.11.0')
 }
 
 apply plugin: 'com.google.gms.google-services'
