--- a/app/build.gradle
+++ b/app/build.gradle
@@ -174,6 +174,7 @@ dependencies {
     // Retrofit
     implementation("com.squareup.retrofit2:retrofit:2.11.0")
     implementation ('com.squareup.retrofit2:converter-gson:2.11.0')
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
