--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,12 @@ dependencies {
 
     // pieChart
     implementation "com.github.PhilJay:MPAndroidChart:v3.1.0"
+    //Retrofit and GSON
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //http
+    implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
+    implementation 'commons-httpclient:commons-httpclient:20020423'
 }
 
 apply plugin: 'com.google.gms.google-services'
