--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.iml
 .gradle
 /local.properties
+/.idea
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
@@ -13,5 +14,4 @@
 .externalNativeBuild
 .cxx
 local.properties
-app/google-services.json
 app/google-services.json
