--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:21.0.0'
 
+    // Add this line to include graphview for charting
+    implementation 'com.jjoe64.graphview:core:4.2.2'
 
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -94,12 +96,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.7.7'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
 
-
     implementation 'com.google.firebase:firebase-storage:21.0.0'
-
     implementation 'com.google.firebase:firebase-auth:23.0.0'
     implementation 'com.google.firebase:firebase-firestore:25.0.0'
-
     implementation 'com.google.firebase:firebase-messaging:24.0.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
@@ -112,7 +111,6 @@ dependencies {
     implementation 'androidx.compose.material3:material3'
     implementation platform('androidx.compose:compose-bom:2024.08.00')
     implementation platform('androidx.compose:compose-bom:2024.08.00')
-
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
@@ -131,11 +129,11 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.3.4"
     implementation "androidx.camera:camera-lifecycle:1.3.4"
     implementation "androidx.camera:camera-view:1.3.4"
+
     //ProfileCirle
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     //CropImg
-//    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation("com.vanniktech:android-image-cropper:4.6.0")
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
