--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:8.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.9.20"
-
     }
 }
 
@@ -81,7 +80,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:21.0.0'
-    implementation 'org.mongodb:mongodb-driver-sync:4.2.3'
+
 
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -94,6 +93,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.7.7'
     implementation 'androidx.navigation:navigation-ui:2.7.7'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
+
+
     implementation 'com.google.firebase:firebase-storage:21.0.0'
 
     implementation 'com.google.firebase:firebase-auth:23.0.0'
@@ -174,6 +175,33 @@ dependencies {
     implementation("com.squareup.retrofit2:retrofit:2.11.0")
     implementation ('com.squareup.retrofit2:converter-gson:2.11.0')
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
+    // If you want to use the base sdk
+    implementation 'com.google.mlkit:pose-detection:18.0.0-beta5'
+    // If you want to use the accurate sdk
+    implementation 'com.google.mlkit:pose-detection-accurate:18.0.0-beta5'
+
+
+    /* GLIDE */
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+
+    implementation "androidx.core:core-ktx:1.12.0"
+
+    /* EXOPLAYER */
+    def media3_version = "1.1.1"
+    implementation "androidx.media3:media3-exoplayer:$media3_version"
+    implementation "androidx.media3:media3-exoplayer-dash:$media3_version"
+    implementation "androidx.media3:media3-ui:$media3_version"
+    implementation "androidx.media3:media3-session:$media3_version"
+
+    /* CAMERAX */
+    def camerax_version = "1.3.2"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-video:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
+    implementation "androidx.camera:camera-extensions:${camerax_version}"
 }
 
 apply plugin: 'com.google.gms.google-services'
