--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,11 @@
 buildscript {
     ext.kotlin_version = "1.9"
-    ext.supportLibVersion = "25.3.0"
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.7.2'
+        classpath 'com.android.tools.build:gradle:8.1.1' // Use the latest stable Gradle plugin
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20"
-        classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.9.20"
     }
 }
 
@@ -46,7 +44,6 @@ android {
     }
     buildFeatures {
         viewBinding true
-//        dataBinding true
         compose true
     }
     namespace 'deakin.gopher.guardian'
@@ -63,102 +60,43 @@ android {
     }
 }
 
-spotless {
-    java {
-        target 'src/*/java/**/*.java'
-        googleJavaFormat()
-    }
-    kotlin {
-        target 'src/*/java/**/*.kt'
-        ktlint().setEditorConfigPath("../.editorconfig")
-    }
-}
-
 dependencies {
+    // Core libraries
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'com.google.android.material:material:1.12.0'
 
-    // Firebase Dependencies
+    // Firebase
     implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-database:21.0.0'
     implementation 'com.google.firebase:firebase-storage:21.0.0'
     implementation 'com.google.firebase:firebase-auth:23.0.0'
     implementation 'com.google.firebase:firebase-firestore:25.0.0'
     implementation 'com.google.firebase:firebase-messaging:24.0.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
 
-    // FirebaseUI for RecyclerView integration
-    implementation 'com.firebaseui:firebase-ui-database:8.0.1'
-
-    // Retrofit and OkHttp for API calls
-    implementation("com.squareup.retrofit2:retrofit:2.11.0")
-    implementation("com.squareup.retrofit2:converter-gson:2.11.0")
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
-    // Gson library
-    implementation 'com.google.code.gson:gson:2.8.9'
-
-    // AndroidX libraries
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.7.7'
-    implementation 'androidx.navigation:navigation-ui:2.7.7'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.4'
-    implementation 'androidx.activity:activity-compose:1.9.1'
+    // Jetpack Compose
     implementation platform('androidx.compose:compose-bom:2024.08.00')
     implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.ui:ui-tooling-preview'
 
-    // UI libraries
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.orhanobut:dialogplus:1.11@aar'
-    implementation 'com.maxkeppeler.sheets-compose-dialogs:core:1.2.0'
-    implementation 'com.maxkeppeler.sheets-compose-dialogs:date-time:1.2.0'
-
-    // Camera libraries
-    implementation "androidx.camera:camera-camera2:1.3.4"
-    implementation "androidx.camera:camera-lifecycle:1.3.4"
-    implementation "androidx.camera:camera-view:1.3.4"
-
-    // Material Design
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'com.makeramen:roundedimageview:2.3.0'
-
-    // Image cropping library
-    implementation("com.vanniktech:android-image-cropper:4.6.0")
-
-    // Kotlin & Core libraries
-    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.22")
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:2.0.0"
+    // Charting Library
+    implementation("com.patrykandpatrick.vico:compose:1.13.0")
+    implementation("com.patrykandpatrick.vico:compose-m2:1.13.0")
+    implementation("com.patrykandpatrick.vico:compose-m3:1.13.0")
+    implementation("com.patrykandpatrick.vico:core:1.13.0")
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    androidTestImplementation('androidx.test:runner:1.6.2')
-    androidTestImplementation('androidx.test:rules:1.6.1')
-    androidTestImplementation('androidx.test.espresso:espresso-intents:3.6.1')
-
-    // Debugging & Compose Testing
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-
-    // Charts & Material Design for Compose
-    implementation("com.patrykandpatrick.vico:compose:1.13.0")
-    implementation("com.patrykandpatrick.vico:compose-m2:1.13.0")
-    implementation("com.patrykandpatrick.vico:compose-m3:1.13.0")
-    implementation("com.patrykandpatrick.vico:core:1.13.0")
-    implementation("com.patrykandpatrick.vico:views:1.13.0")
-
-    // Jetpack Compose navigation
-    implementation("androidx.navigation:navigation-compose:2.7.7")
 }
 
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.android.application'
+
