N.V. Sainath Reddy made these changes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -207,6 +207,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
+        <activity android:name=".view.general.DashboardActivity"/>
+
     </application>
 
 </manifest>
