Added Activity Logging Interface with Spinner, custom input, and comments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -209,6 +209,8 @@
             android:resource="@array/preloaded_fonts" />
 
         <activity android:name=".view.general.DashboardActivity"/>
+        <activity android:name=".view.general.ActivityLogActivity" />
+
     </application>
 
 </manifest>
