--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:8.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20"
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:1.9.20"
+
     }
 }
 
@@ -75,6 +76,10 @@ spotless {
 }
 
 dependencies {
+
+//    for chat bot
+    implementation 'com.airbnb.android:lottie:6.1.0'
+
 
     implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'androidx.appcompat:appcompat:1.7.0'
@@ -164,7 +169,7 @@ dependencies {
 
     // Houses the core logic for charts and other elements. Included in all other modules.
     implementation("com.patrykandpatrick.vico:core:1.13.0")
-
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     // For the view system.
     implementation("com.patrykandpatrick.vico:views:1.13.0")
 
@@ -172,9 +177,15 @@ dependencies {
     implementation("androidx.navigation:navigation-compose:2.7.7")
 
     // Retrofit
-    implementation("com.squareup.retrofit2:retrofit:2.11.0")
-    implementation ('com.squareup.retrofit2:converter-gson:2.11.0')
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'io.realm:realm-gradle-plugin:10.15.1' // Or latest
+    implementation 'com.google.android.material:material:1.9.0'
 
     // If you want to use the base sdk
     implementation 'com.google.mlkit:pose-detection:18.0.0-beta5'
