--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -197,6 +197,8 @@
         <activity android:name=".view.FallDetection.FallAlertActivity" />
         <activity android:name="deakin.gopher.guardian.view.caretaker.notifications.confirmincident.CallAmbulanceActivity" />
 
+        <activity android:name=".view.general.ChatBotActivity" />
+
 
         <service
             android:name=".model.FirebaseMessagingService"
