New exercise portal on main page (Activity pages) (#303)
* added patient_manual_main and patient_manual1 and edited strings.xml

* added activity_exercise_main_portal.xml

* Added activities for cardio module, flexibility module, strength module, colors, tab, tab selected.

* Added activity_exercise_balance.xml activity_exercise_breathing.xml activity_patient_manual2.xml activity_patient_manual4.xml and drawables exercise_portal_menu.png pins.png and safetyguide.png created the main Exercise Portal on the Menu Page of caretaker.

---------

Co-authored-by: Onwa <amehugochukwu@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -195,6 +195,11 @@
         <activity android:name=".view.falldetection.FallAlertActivity" />
         <activity android:name="deakin.gopher.guardian.view.caretaker.notifications.confirmincident.CallAmbulanceActivity" />
 
+        <activity
+            android:name=".PatientExerciseModules"
+            android:exported="false"
+            android:label="Patient Exercise Modules" />
+
 
         <service
             android:name=".model.FirebaseMessagingService"
