--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -20,7 +20,7 @@ jobs:
           distribution: 'corretto'
 
       - name: Run Gradle Build
-        run: ./gradlew build
+        run: gradle build
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4.3.6
