--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.gms.google-services'
     id "com.diffplug.spotless" version "6.23.3"
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -92,6 +93,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:8.0.1'
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.11.0'
 
     implementation 'com.orhanobut:dialogplus:1.11@aar'
 
