--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
