WIP: my local changes before merge

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:23.0.0'
     implementation 'com.google.firebase:firebase-firestore:25.0.0'
 
+
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
+    implementation 'com.google.firebase:firebase-auth'
+
+    implementation 'com.facebook.android:facebook-login:latest.release'
+
     implementation 'com.google.firebase:firebase-messaging:24.0.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
     implementation 'com.google.android.gms:play-services-auth:21.2.0'
